<resources>
    <string name="app_name" translatable="false">Speedo</string>
    <string name="onDataInit">Data Initialized</string>
    <string name="current_speed">Current Speed</string>
    <string name="max_speed">Max. speed</string>
    <string name="reset_max_speed">Reset max. speed</string>
    <string name="current_distance">Distance</string>
    <string name="reset_distance">Reset distance</string>
    <string name="noSatellites">Number of Satellites</string>
    <string name="play">Play!</string>
    <string name="kmh" translatable="false"> km/h</string>
    <string name="m" translatable="false"> m</string>
    <string name="accessRightsGranted">Access rights granted</string>
    <string name="accessRightsNotGranted">Access rights not granted</string>
    <string name="language">Language</string>

</resources>