<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- TextView for app name -->
    <TextView
        android:id="@+id/textSpeedo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="34sp"
        android:textColor="@color/colorSecondary"
        android:text="@string/app_name" />

    <!-- TextView for current speed -->
    <TextView
        android:id="@+id/textCurrent_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textSpeedo"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorSecondary"
        android:text="@string/current_speed" />


    <!-- TextView for maximum speed -->
    <TextView
        android:id="@+id/textMax_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCurrent_speed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorSecondary"
        android:text="@string/max_speed" />

    <!-- Button to reset maximum speed -->
    <Button
        android:id="@+id/reset_max_speed_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/textMax_speed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorSecondary"
        android:background="@color/colorAccent"
        android:text="@string/reset_max_speed" />

    <!-- TextView for current distance -->
    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/reset_max_speed_button"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorSecondary"
        android:text="@string/current_distance" />

    <!-- Button to reset distance -->
    <Button
        android:id="@+id/reset_distance_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/textDistance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorSecondary"
        android:background="@color/colorAccent"
        android:text="@string/reset_distance" />

    <!-- TextView for Satellites -->
    <TextView
        android:id="@+id/textNoSatellites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/reset_distance_button"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorSecondary"
        android:text="@string/noSatellites" />

    <!-- Button to change language -->
    <Button
        android:id="@+id/language"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/textNoSatellites"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/language"
        android:textColor="@color/colorSecondary"
        android:background="@color/colorAccent"/>
        <!--android:background="@drawable/button1"/> -->



    <!-- Other buttons and elements -->

</RelativeLayout>